--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -1,30 +1,77 @@
-<table mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-      </ng-container>
-    
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-      </ng-container>
-    
-      <ng-container matColumnDef="reason">
-        <th mat-header-cell *matHeaderCellDef>Reason</th>
-        <td mat-cell *matCellDef="let row"> {{row.reason}} </td>
-      </ng-container>
-    
-      <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef>Amount</th>
-        <td mat-cell *matCellDef="let row"> {{row.amount}} </td>
-      </ng-container>
-    
-      <ng-container matColumnDef="resolved">
-        <th mat-header-cell *matHeaderCellDef>Resolved</th>
-        <td mat-cell *matCellDef="let row"> {{row.resolved}} </td>
-      </ng-container>
-    
-              <tr mat-header-row *matHeaderRowDef="columns"></tr>
-    <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-  </table>
-  
+<mat-form-field>
+  <mat-label>Filter:</mat-label>
+  <input matInput [(ngModel)]="dataSource.filter" />
+</mat-form-field>
+
+
+<table mat-table [dataSource]="dataSource" matSort>
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="id">Id</th>
+    <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="date">Date</th>
+    <td mat-cell *matCellDef="let row">
+      <div>{{row.date | date:'mediumDate'}}</div>
+      <small>{{row.date | date:'mediumTime'}}</small>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="name">Name</th>
+    <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="reason">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="reason">Reason</th>
+    <td mat-cell *matCellDef="let row"> {{row.reason}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="amount">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="amount" arrowPosition="before" class="right">Amount</th>
+    <td mat-cell *matCellDef="let row" class="right"> {{row.amount | currency}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="resolved">
+    <th mat-header-cell *matHeaderCellDef class="right">
+        <button mat-icon-button color="accent" (click)="addTransaction()"><mat-icon>add_circle</mat-icon></button>
+    </th>
+    <td mat-cell *matCellDef="let row" class="right"> {{row.resolved}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columns"></tr>
+  <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+</table>
+
+
+
+
+
+
+<ng-template #templateEdit let-data>
+  <form [formGroup]="data" (ngSubmit)="submit(data)">
+    <h1 mat-dialog-title>Transaction Editor</h1>
+    <mat-dialog-content>
+      <mat-form-field>
+        <mat-label>Name:</mat-label>
+        <input matInput formControlName="name" />
+        <mat-error *ngIf="data.controls.name.getError('required')">Name is required!</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Reason:</mat-label>
+        <input matInput formControlName="reason" />
+        <mat-error *ngIf="data.controls.reason.getError('required')">Reason is required!</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Amount:</mat-label>
+        <input matInput formControlName="amount" />
+        <mat-error *ngIf="data.controls.amount.getError('required')">Amount is required!</mat-error>
+      </mat-form-field>
+    </mat-dialog-content>
+    <mat-dialog-actions align="end">
+      <button mat-button mat-dialog-close>Cancel</button>
+      <button mat-button mat-dialog-submit [disabled]="data.invalid">Save</button>
+    </mat-dialog-actions>
+  </form>
+</ng-template>
