--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -34,14 +34,31 @@
   </ng-container>
 
   <ng-container matColumnDef="resolved">
-    <th mat-header-cell *matHeaderCellDef class="right">
-        <button mat-icon-button color="accent" (click)="addTransaction()"><mat-icon>add_circle</mat-icon></button>
-    </th>
+    <th mat-header-cell *matHeaderCellDef class="right"></th>
     <td mat-cell *matCellDef="let row" class="right"> {{row.resolved}} </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="columns"></tr>
-  <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef class="right">
+      <button mat-icon-button color="accent" (click)="addTransaction()">
+        <mat-icon>add_circle</mat-icon>
+      </button>
+    </th>
+    <td mat-cell *matCellDef="let row" class="right">
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>Resolve</button>
+        <button mat-menu-item>Copy</button>
+        <button mat-menu-item>Delete</button>
+      </mat-menu>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="['id', 'date', 'name', 'reason', 'amount', 'resolved', 'actions']"></tr>
+  <tr mat-row *matRowDef="let row; columns: ['id', 'date', 'name', 'reason', 'amount', 'resolved','actions'];"></tr>
 </table>
 
 
@@ -55,17 +72,17 @@
     <mat-dialog-content>
       <mat-form-field>
         <mat-label>Name:</mat-label>
-        <input matInput formControlName="name" />
+        <input matInput type="text" formControlName="name" />
         <mat-error *ngIf="data.controls.name.getError('required')">Name is required!</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Reason:</mat-label>
-        <input matInput formControlName="reason" />
+        <input matInput type="text" formControlName="reason" />
         <mat-error *ngIf="data.controls.reason.getError('required')">Reason is required!</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Amount:</mat-label>
-        <input matInput formControlName="amount" />
+        <input matInput type="number" formControlName="amount" />
         <mat-error *ngIf="data.controls.amount.getError('required')">Amount is required!</mat-error>
       </mat-form-field>
     </mat-dialog-content>
